--- a/ansible/inventory/kube/host_vars/k3s-0.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-0.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:oyPA9aLT,iv:ao2QGsNw1wF7Yvv2TFgOy8cJxvLKM0ewA++KHte7CpY=,tag:bZwEY/EKvpB+t1aCSbVMlg==,type:str]
-ansible_user: ENC[AES256_GCM,data:AHBnJm3N,iv:Nl/2SSaeFV6+UuSUFBtPdhde6bt/qu/H/absjtcUKC0=,tag:j5ajwa8QF1O1COqUqjm40A==,type:str]
+kind: ENC[AES256_GCM,data:ZWDhqf+m,iv:ZXAmGe2uscGPgx9lagnIPVhrtp35fZNQupNoslZin0s=,tag:3H00oZ0iGygJmYjA1ZCq9Q==,type:str]
+ansible_user: ENC[AES256_GCM,data:TlaNe2Nl,iv:omqrpiAhpPtv+fM94ZH9TZnzEHklFnuzYOh/tyt6/h0=,tag:sJ+uMyQMoAqaPBtQequPGg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB2TC90S0RsdzFTUWxZNGZZ
-            VGw1eE5maHVRRjY2OThVOU1jTUtyV3pRTFNJCk10bVNaMUIxK1ZqcTJEbXE5Y1pF
-            cXhRVGMraXZjWHB0MnZTVm81TlkyVncKLS0tIEduSy9CNk4vT0ltTUdNZDZkaFY3
-            ZEVRSlJZZm1FVmJrd0ZOT0w3UTBReUEKmYvfvmo1i10zxo/RG2C6GzpWGn1Uokoq
-            gSC7dRAM8sc20xyTFsbBrNWGjIKcE16fwTYt9Mcu+RpZjfMt2W5Jig==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5MjFNMGFJdkZXSytnd3dY
+            YktXVVFGTmtaSzkyODEvMTBObEVxSXBhRXhjCi96dHFnN3RqU1F0YzlKV2dSOElO
+            eWphRVpYRlUzMlJSME03aTIxZG0ySWMKLS0tIFVKZC9aekFRV1pPRkI2L0QvOGEv
+            OUJrNzRCaHpXOG5mamx2d281c1VPRWMK6rWLPwI0gtXwWXhX3LwZH9cKgbMjNSOj
+            1RWrOi9qktE1/WBJvau4+tWiqplZiZBtVhbX1gP64ou4ZhZRK6a+Tw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-31T14:45:14Z"
-    mac: ENC[AES256_GCM,data:BiffCFcNKRE7/x0NQ4Jv+HoznhaSU9UZsEzue6mRk9f0psXSDAbb+KZwO/HezebjoFgRKM5mct0rXwkYh5nCrKEqvcMj+ZkwCCxB6pZPADR9S62jPzsdHWsKBK/MkGR5r705bhu0hRouZsnD1j4Knvgr3UM7VsfBBblBp8/5BGY=,iv:xCxFReEeTr2FVG+Afz35TzL1v970lb5YX4iIr9qiiqU=,tag:BEeVpFyrkUX5XSvI5YU/VQ==,type:str]
+    lastmodified: "2023-01-01T17:59:55Z"
+    mac: ENC[AES256_GCM,data:/wO8mavkt5ZNzPhCVk9HkQCnW2ndaQ09TFFtymouimxhbhqzq18vrtWS0tRNxbztsx8K2HBiFnMBXRBpuwHHOpjxYSUH7auogtQuFbx6dwSYQju8c/fhr21wj0/VpUJVTE97MHWN23nu98qughCj8W5KhfE1U/tYTXkCsZmir2I=,iv:Z3HvGV7kQ++X4PiOh7huPgSkO3H+znllKRUq7o18KMo=,tag:ahuzHcDYXzIMxme143p+vw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
