--- a/ansible/inventory/kube/host_vars/k3s-1.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-1.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:bINWKYVp,iv:6j31wyMJlnZbpyGNzm0Og6A9s3AI94cVfx//bT0aYlY=,tag:z6tQNFLyk/yE15WhW9IR/w==,type:str]
-ansible_user: ENC[AES256_GCM,data:mpyVoxLj,iv:VpBNfe4EcyOI/n3K9hYrXflfKXajblYGInCkerhTSmE=,tag:5cjSO4MFuxvycGVzVYA/kQ==,type:str]
+kind: ENC[AES256_GCM,data:e1VpPCDx,iv:BuHdFAbzEFFbTS3pIwJs64aNss3JrcQUfIs0bGK/vSU=,tag:zSUmBJB0tANqzqr7NQAHaw==,type:str]
+ansible_user: ENC[AES256_GCM,data:C/3zTy5o,iv:UEzLGXQH6I51G3QX06Poms+OQwHKKDG5id0anrg4j9g=,tag:429c1FvqiCi7XKjtRCYG5Q==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBza0EvN1FEdGNiVlBNTlRt
-            VXZtYmdaaTRDWm8zaitLSUNUSXF5d284cnhrClR5UEZZcXAvOWJHRXdIOEpMblhk
-            b24yMVNVZFpzNlcxM28xbEdzOUZTcGcKLS0tIEJVWXFzVnp1Rzh6dmpqcE5aTWYw
-            UDRDTENJc2wvQmYzL3F0bjdESlB0ZmMK7CaW2YF4GPR3eMO7gD8+8KCdZiOmHPhO
-            SGF275/4CNeF17AIiibFbKBkdWSaOt2eUTUCMhGqheUwa/xnz5ziMw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBLRGFrZ0w0SzlPQVF0QkZ1
+            cnZrc2tEL2tWNW81N1BrWlNCSjFndDBuajBVCnJvNDJEeTlxR2R6VnJPSndDSEUz
+            SURvMGtVQkViT2tnOHl3ejRxcEp2STQKLS0tIFJIZkRNNy9oNzJ3VkR2LzRJc2Mr
+            Wm9vK1M4L2J0TTZVdFBKM0I5WTVQejQKNv4+WP99gRla03u+WbSgKG8p6XOK9bdl
+            UDIQc4+4xYVl73T+uGMchOy065UKB+45ug20txxa2NsUskHbd6cFaQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-31T14:45:14Z"
-    mac: ENC[AES256_GCM,data:TOatdVbH5gVFDlrqB2vs1iwu5ikWddQgxcLE37Pf+Tko3E5kjp7+/dWO0UqTA3K8vc+lLBVeAfnHrfAAlSvyD2KhV9Pcij1/qVx99J6a0tQRy/drHP6WDdx3adc4gBpseB6JiBE9yqtBx4g883e4LPhq/LoiUFPxwHtweUoZvjg=,iv:iksWzm/p8TL2ynr8C1RLjFdJvxAGP9lEKqktDAv6+C8=,tag:cWZgXJl7yxAHnByTKCHwUg==,type:str]
+    lastmodified: "2023-01-01T17:59:55Z"
+    mac: ENC[AES256_GCM,data:npl4xyuRAT1n2aEFQVMlZBOZe3dEhBbkLrevxdXO839DBqa4awNrzpmW4OK6gp8IiKWb/7wSXWNzft6fzzI/xyAPLUWaixapRNP/KtfRZ7eHtaCKooCpDD+AkP1Pyn9xK9Qi3G7m89T1iRYBhz1+i9fZ9SXICGyiLFaAdaQzulc=,iv:q8DdqyhNfsckeI8agks5qusKM8a1gFj0pD56ApVTEg4=,tag:vPPb0D1rT7VqPhfpOSTjBQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
