--- a/ansible/inventory/kube/host_vars/k3s-3.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-3.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:YeznwZJo,iv:zIB42fu1NtYaoDA/PqyxeUiIp2IYDLfx95GiexUhfLc=,tag:cXnf++s/ySJKN0i28LhaNA==,type:str]
-ansible_user: ENC[AES256_GCM,data:0IrUCKB7,iv:msnJTrdmT92zmsL9fJUrliQt8QlV2/O89+YIpflkSkQ=,tag:5rAFSJZT4vIp0UAAEs46AQ==,type:str]
+kind: ENC[AES256_GCM,data:kQy6BXb6,iv:vsdvY2iumJsFDNGtJf5uJrxicVOq1Bv5sFTF8V5aUoU=,tag:sn5DbL3mh3MbEN+LhMkIVA==,type:str]
+ansible_user: ENC[AES256_GCM,data:AZvFdOXU,iv:AyONmqnpuu2lGeWXQt3KO1KDC0bvfWx/WrPS/cSdTR4=,tag:/X/JXIBrbui1FRfBgQB4xw==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSByeTJFb3pNSDVtU0Nza1p5
-            K1RKdktJRUwwMnBhN2xvR1pQUVFmYUhVc0dnCk1pcWU0T2tzWmVIOHpOdXVxTjAy
-            eUkzdUl1MCtyZC9rcFJIZ1EwRTJ3eFUKLS0tIE0xU08vY1o1V3V4RERRMGtVMFox
-            OSttSGs5SThUaHFJZ3dvYjJmRDhTMnMKH/edeR0aFWChdKY5zSUqKfhh/Lo2tfmp
-            g/Hq94QaxxOqoPmcDl6DZ59sY1p9Pv0cbrMRkdJsPdkFCSCpI0WreQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA3ZnBONXQzMklTNFRzbDdw
+            a2cva1VmTXFOaGtSeFhwUW9kbzZraGpMRjNNCm5lVm81Z0NTYktSR090WkhtZ2xm
+            Vms1RlJDckV2YkV3ZS8xWGltN1NhNmMKLS0tIHhUOGJjTUhUNUNjSUtUcUJQRllK
+            TlVFV0RhV2x4NnB2cC90NzkwRWd6bmsK7tMdcd3IQ8C0FXa1ct8EXXeW3UDgf/ZT
+            Hg4lEKx5rieCxXtvG00X9QHOImpPLoByGSgG0zSaq4leeeXzNLq1tg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-31T14:45:14Z"
-    mac: ENC[AES256_GCM,data:Edf6fL5ZT6gDxUF5r9WJvwILgKUGs9pMnaJBXo0gLEOALJRkK6dwT5fFVlaxYBUBryT5Wayne5DEYeBK/pe0zGV7CG2zu0OWDObYlrrPYb/VCRHduPcymrbLlc2oOIXVTEkDdQvnsm3OEgezgfhcpcKDWzbkdbhtMXJgXwocSVc=,iv:KYoCPTZQ90rLN9sBbOod8l2HMmyPXj4b39BYjwAsA8c=,tag:pA0HNizmmMPOVAJyMEyHQQ==,type:str]
+    lastmodified: "2023-01-01T17:59:56Z"
+    mac: ENC[AES256_GCM,data:Yh/XD/x+rmZJ5uuKJWB2bp5zEJx+EMVuJdOu3iK8+4X/9Hj0YVz1euZ4geKYhKX1Rrv6z1qKIcFHsUk8qO7hBnaUtGWxLO8cg2gUQADlqhXeLvgZFj5qpNyx1j42hY2HMZhweR/Z9Enbk3QPmxdHVW8Uqx5NadQ7yqfT60TumaU=,iv:QdcuhSCq/NwQNXU2Np9S0XF5eBJCyBM2qNuzwlMWqaw=,tag:ifJS1jN9rwFUizsyF/N3vQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
