--- a/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
+++ b/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
@@ -5,9 +5,9 @@ metadata:
     namespace: networking
 type: Opaque
 stringData:
-    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:QekEARyAF+gh6C303m7FvxuJaFMf,iv:S3xuivhGTIhV+mNfll8FHCdh8ynCw851EaXtT+qjS0U=,tag:pyTVSyo69N1JkjubaEx8FA==,type:str]
-    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:lnllpOa/d8luOKvGaCs/ZopDSzAFK6UDsm7mrh/JdjiX923u7g==,iv:hPXFNJ0FzyQw2ugGlY5PqVCggP8u1SjK0KkyGulcHzE=,tag:bqNgnB/zGZ0pl1HXqH4KhA==,type:str]
-    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:UetkYS/gTiBR25o=,iv:ccDLV2yZcJXge7J5q43YcOqkBipnti8nkhbWEkAY2tM=,tag:p8ovtTE4Q9RPKUe0Ji1Zfw==,type:str]
+    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:ykN6YtQhU7LbV+6RMlQpzoeDnd3A,iv:SXrjztWUwnlz6h6SDJBIFzkpVosAO418xCONOksub2Y=,tag:vD/wettofEHpwHVxxiWQFA==,type:str]
+    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:NrcoltU3/iMSMa01xbvGZZ1ndtRMFPJ+6LkBqWyGJ0BuLMM7dw==,iv:wXuWHCazdHwocCLqd2dpbco0YWN3zgULoMbOrEZUAoc=,tag:EgA5LZZr6Vt1THz17ICktw==,type:str]
+    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:nPN276SCctSb/Ao=,iv:7iXLjEgXrxF3ujyq7MJB9k2slxo3Eo2/OIG0VZZQ50o=,tag:yqDc2cs5TO+/LBmJ7vPy9Q==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvUnJtSzNVcnRhRGFUSGRB
-            UFJiN1l2aGpaai9LbmF6WHNvV05SRXdOakc0CnVCeXRHdGpOSWtDUklJbzU3S3Js
-            cmljUXN5aEl3OTVvWjc3bHEvWXZQVE0KLS0tIGRaQ0dvMG1MUk1KQjQ1ZHVDQmx0
-            Mm1NY0VUSERRSXJVdjJ0bGxPaW55UDgKOpLJSKktlIRk1aVUI71bySKDwRe8DmJ1
-            AP2jnGNeC0UQ+TXaBcsj+T+a8QKphJB/Que+GK9VYUglVtizhHEAsg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvdG5zWnN0RGkyaUV0Skpq
+            dWpQMlRkbDRtVWUvdTRaN3d4UWZXTUI1Q2hrCldrZlAvRnYrd3BQMmtscTR4bTVP
+            TFdrbnJzYVFpNUZDd2k2M2MyTy9xc3MKLS0tIG85RVJ4MEN6cjUxdVZHMTFQUTdU
+            WE1iZXFuNW9hUDFPZjhjeXNET0RYNHMKJ01KjqJaFEa5Z3Paf8RK5YiyiPdrsz0k
+            8OTZVYF+udGTJoAJcbBxAzz+gizmsWZU5+42kE3fMi9DXyz7YkkuBQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-31T14:45:14Z"
-    mac: ENC[AES256_GCM,data:x/Kb+D2sA9M1zE0JHiDzfBTsXOi3AQcbTWg2GxrzTgWBUWdalQxgLF/Gzbfwscp//lXzRp18VBZEhT3BQhzaqhRpZ4vRi9kuzKnxzMcIQgRdHpoZ9VvK/gS18HRPbQc200Xvqw8ZQcY6SBb0waysorPXYZHGkqk0iOLw3NDlZo4=,iv:uQzNNyN8WUe2zBq/WYtT06oLtrf/Ragft4OZgHydskA=,tag:8uLNFXNOF0doQ4ulqi05vg==,type:str]
+    lastmodified: "2023-01-01T17:59:55Z"
+    mac: ENC[AES256_GCM,data:7IGfuzervCDJG4eJfeC27E1umykEkThOvU5HKQp+u5yE43zSeH+h60+/26BxCLRiQ6hvgMuAx4cp7kqoLAuxy791tR2ffBGweF1rICQn9Uxcje+wfsvypkGW4OLvM2uITuGLSC6PtJqslvJS6Ev4+gBj08hIf3XfGPllxg/jVPs=,iv:3ghf1+0D4vlAyxHqYwkpn2YKoaxntvntiSKyoLK8yOs=,tag:GydLv4wuYzkddEzDlB9eOQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
