--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,8 +4,10 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:bncHvS4q8JKdx9Y=,iv:hHowmkYVZlPnoRnZIsi6DiS6IIAk8ZnvTtxNT8TaZic=,tag:jg7snzcp7Bp8z+Df6OyS8Q==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:1dVvT+GD9wWKjRTMrCkmDgsM2fQT,iv:UQQpqQXC39jsQCbFKmng1EAdZMRuKe8upIlzkP+LwZg=,tag:y/JShwWImbLkD1c8+PxF6w==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:IhI5o2YKnOKHX48=,iv:PRlNVLhsdouIdYAi4KgQLicx9Om32+BLX1IWUiETmow=,tag:4zXwFzPyqPzLSROYfq7nDQ==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:6J3LGewA0g+trtA7+75naQcjnKHY,iv:p9EMl+uBn682NhQI5zRgLcEWPJIxb87vRuyAWlq3qwo=,tag:90g0BMqSEEGc7vTQ7TRqxA==,type:str]
+    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:a77E6sWDpqL0m47r++daXyckQ/3zokVsA2QpUIY6rxo/i8OMzvf7Bmg49+XyIgC6UWW704ZtUMOnPD36mKTSvNImzhfX//c=,iv:kYQZi1lANnaM0H4m9UqvCvDYzmjG4EdoeP49zdXoPA4=,tag:PjEl5u1U+xmlXjlYCVZmSA==,type:str]
+    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:vXIXcIKcp/ZwahMkglIo0+HI6iSpXIRh74xVDvU0wd/QQfM=,iv:UVdQvT+EnwVAIIWcyUN+ewRAMjN+dB7ZqAz3sj245e8=,tag:i5zZPzCNtr1czZ88ezTY7w==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -15,14 +17,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA4SzdvTnY0cmx6UDhyVS8w
-            TTVPYWh6amd2K2c4K3o3SDFuWVNkNEdQdGxvCmd0RDczSzdab0FvdlcySzFVZVhz
-            NVQ3aWVYR0YvTGlYZmM1elRvRVAxQlEKLS0tIHBGQWp6SENuai9qOGRiNnRGdStF
-            NlJmWC9WT2M2TXE3UEQ2R3h1VHJUN1EKosyquLMaKZLxxn6ZbLMW7ac4/oUjOdVI
-            2Nl3ytGreBaReQJDYshQf8VDCn2rAqwpt3JGyb71QRjNoRF8DG6jhQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAybUNDcU53cXdrVDRMdUwy
+            VDdPd3RKdFRsZis0eWN2bzVKUVMwMFFPTGl3CmpDNThYLzFabDNpbXJ0WDJaVzh6
+            cjlwMXB2TCtmbEFyMld3ZU9qUFFLV0UKLS0tIHU2a2Q2RHlrL2RTc2dOMTdKUnpt
+            aDlzY1VFeTdYdVk1ck8wVndXRW1iWFkK4/uZHbbHBiBWG+0g3Ofe4cw/F25PC9OR
+            VwKVJtOGNK7IAbQJPGRZ1+TOtFnX+Jqiorx9n2rPpTfxwW2ySDuKjQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-31T14:45:14Z"
-    mac: ENC[AES256_GCM,data:IpOH3Cc09xie/uFgOlRo2KvtumNDNdC0is5fUf+ivdmR5sh2z5JvaQu9leyLun+B9HZeeLrGbAsVI7oIso5kpQROULejkmHXIHM5u7i9ixroC2OIFF7EzIMezvl26A9zQxg5jQ7NN28l9SaYebaRUMB7LQ8uDXc4BL/0nw9jhMw=,iv:Wrx3eYU8wTnjyMbkEl9MLHjhp0GtzkKx9fpSXWjKyAw=,tag:AU+0wbKcuj6ZOPA2Fuzs1w==,type:str]
+    lastmodified: "2023-01-01T17:59:55Z"
+    mac: ENC[AES256_GCM,data:DP7NN3g7MpMOcaGoATQZTy+tLXjdKHuV0wGMrRLGMR9n5FIzvwln6PurgfVjc91tLySzH+nkj/t//yrRfylaeV8Jooqpvbk32D6N6c20APqKAijjkwI6YgeG1bvfi+JzWbpBPjsFnHDBTdvl26c8nTB0cA1oZzAvJ2ADn4wv6Yw=,iv:L9PHk9wX7UKoFrwtg+pXlArdq4ezczvp52Av/Roomf0=,tag:2SviuJ3RXrzSrx0XUy9ryg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
