--- a/ansible/inventory/kube/host_vars/k3s-2.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-2.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:xckMGv+R,iv:fOcDsHtGo0eLebjcwUxo27tydB3Y3ZI4vjQOsMZsqIw=,tag:vM5XTQAIiOMn9B+Da/qz8g==,type:str]
-ansible_user: ENC[AES256_GCM,data:87GVfAAi,iv:BO4P1MFO8r8JjMm4Gu6b604vl+kVHBLjk742rYqgvNw=,tag:KFOfUtkiPdkNbW95mPqZ/Q==,type:str]
+kind: ENC[AES256_GCM,data:YKl9652Y,iv:ZfANvNmJWULVGotUR0PDqJqquXgGG861OT4KoMtOBH0=,tag:UpBgEvE43WMuXVoxiWkFqg==,type:str]
+ansible_user: ENC[AES256_GCM,data:yA+vg6U7,iv:rEjfurXmFKaDZt1UasAgS3vgI7AaVnD4H32tIm5lL38=,tag:1qJm0hBBoAEuJTrhqhqW1Q==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBaS1NEQlppSUdFallIeXF3
-            RFoySWRPTDB1azhCN1d4ajVmMjB0L1lNYUE0CnpzQ2Y4dzFoYTV6R2hSalZ3L0xV
-            MUM0L3BjWnBjYUhuNTlOZGdLbWc0aGMKLS0tIDFwYUYwQlVtS3RBSWx5RXRNTUN0
-            RlA1RmRuWWR3N1hMQTM5QXNHMGMxS1kKftQEG+t5RHLOlimnere+kEnJGMaSN+MZ
-            iSFb1hmHkV6Ny+WFU/oipoXs6565uM8vpIZTDypKuEJPMH+gj9lHjw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBlTStTdXU3WTRMUmNZcGRj
+            Y1BoZ0ZrR2F3Qmd5OUJGYWQ5c2UxejZiSUdVCko4NUFQaEpXK2JvMkRCdTRiSG1y
+            eTdmVnhaencwSzVKTk85MlFwaGowa1kKLS0tIElDQlpjWU5NMHNzNmlweFYyaEsr
+            MlF6WmcyN2c1ZFN2TFpNeVhoZVZscjQK4eAlWWODX6W/ssWco+xWAMXjLJ4HJ9G4
+            o1CpP7w9EnFUS5lv6Uc5Ha/tPmH81ecuwZpnXMQJJSBI5g2VB4N9Wg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-31T14:45:14Z"
-    mac: ENC[AES256_GCM,data:J81qPpH48eHu+EGKNW/i1EbW/eLj0xlVpTabHNr5tctUbxdvPDwEBUKldbhTBJaGPMHm9wvXXI3tDwxMhe8ZSZvK4gsBjS+fw1xa0i5NdDq5nlS7ZHx/UTTj0PArWRlE7+hyPXQK5Mz6FNkFLkLWIRzblk97Z3gE+Buxg0s0aEc=,iv:XbxUX0IYnbsSvejM5SE8XeJs4UHrtZaUDcJN7RrTc4c=,tag:wzf6eLvGFojJ65cFPs85gQ==,type:str]
+    lastmodified: "2023-01-01T17:59:55Z"
+    mac: ENC[AES256_GCM,data:o2DzuhpErGHhZ0/B3rOqRtMt/NYDGrGqH6Py/HvG0UIOUccH7C4ktKBTjy45d9Pc6OEsTmx91vbZGH6/t6tfllXcUPASIF8ut96LbADmwWP3Pre3AiUXM13xsf55t/q/CRHYLmyCfBwaaxW6HFP61WpEf+WrG3F5jkHZrJ/2bkY=,iv:0j63I7OQWhxrb9xcCjAKYqfMDlvrLUSiVKG49n+sk+4=,tag:wZ3A2rNe4vVyTkuj18bCnw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
