--- a/tmpl/kubernetes/cluster-secrets.sops.yaml
+++ b/tmpl/kubernetes/cluster-secrets.sops.yaml
@@ -7,3 +7,5 @@ metadata:
 stringData:
   SECRET_DOMAIN: "${BOOTSTRAP_CLOUDFLARE_DOMAIN}"
   SECRET_CLOUDFLARE_EMAIL: "${BOOTSTRAP_CLOUDFLARE_EMAIL}"
+  SECRET_GOOGLE_CLIENT_ID: "${BOOTSTRAP_GOOGLE_CLIENT_ID}"
+  SECRET_GOOGLE_CLIENT_SECRET: "${BOOTSTRAP_GOOGLE_CLIENT_SECRET}"
