--- a/kubernetes/apps/networking/traefik/app/dashboard/ingress-route.yaml
+++ b/kubernetes/apps/networking/traefik/app/dashboard/ingress-route.yaml
@@ -16,7 +16,7 @@ spec:
         - name: api@internal
           kind: TraefikService
       middlewares:
-        - name: traefik-forward-auth
+        - name: traefik-middleware-chains-forward-auth
           namespace: networking
   tls:
     secretName: "${SECRET_DOMAIN/./-}-tls"
