--- a/ansible/inventory/kube/host_vars/k3s-0.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-0.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:ZWDhqf+m,iv:ZXAmGe2uscGPgx9lagnIPVhrtp35fZNQupNoslZin0s=,tag:3H00oZ0iGygJmYjA1ZCq9Q==,type:str]
-ansible_user: ENC[AES256_GCM,data:TlaNe2Nl,iv:omqrpiAhpPtv+fM94ZH9TZnzEHklFnuzYOh/tyt6/h0=,tag:sJ+uMyQMoAqaPBtQequPGg==,type:str]
+kind: ENC[AES256_GCM,data:T3DPWbKm,iv:vtSaOgVyVSPO64Es3rzwjLIpNwhnbNDHZbsyxtBWKaA=,tag:nDgJzPG0Ia9/aMMtnPdY/g==,type:str]
+ansible_user: ENC[AES256_GCM,data:9pPBYAMm,iv:Jf5Z83yBJmqVukArjl2MH5GsmzwJs0nPHOMaPFVWs2A=,tag:EvDJEGde4v/sEr19cBEsUw==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5MjFNMGFJdkZXSytnd3dY
-            YktXVVFGTmtaSzkyODEvMTBObEVxSXBhRXhjCi96dHFnN3RqU1F0YzlKV2dSOElO
-            eWphRVpYRlUzMlJSME03aTIxZG0ySWMKLS0tIFVKZC9aekFRV1pPRkI2L0QvOGEv
-            OUJrNzRCaHpXOG5mamx2d281c1VPRWMK6rWLPwI0gtXwWXhX3LwZH9cKgbMjNSOj
-            1RWrOi9qktE1/WBJvau4+tWiqplZiZBtVhbX1gP64ou4ZhZRK6a+Tw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBXVng2ZmtFK0JLeFdCekFE
+            aWYrR2FIa0lkYWt4TVpOTTZiZUtENDErTVRRClpvODZsWjJhZWQwclQ4RjkzV1NU
+            eWVZME1OVzQ4Rjd5TEo1VkZpVk5ZYU0KLS0tIGJQeGJBdVBYazlVQzk2Y21kNWJR
+            Tk5DVXJlMkxMTHI1Skxpak0rMm1ma3cKfWcIRBDqBmnNzER00FgqjFmel8t8Lr8f
+            RL7MGicZwndlaOm6zgEFeMSAtjHhKJUkPLhV7ZfRDHGL1z1HTBAU3g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-01T17:59:55Z"
-    mac: ENC[AES256_GCM,data:/wO8mavkt5ZNzPhCVk9HkQCnW2ndaQ09TFFtymouimxhbhqzq18vrtWS0tRNxbztsx8K2HBiFnMBXRBpuwHHOpjxYSUH7auogtQuFbx6dwSYQju8c/fhr21wj0/VpUJVTE97MHWN23nu98qughCj8W5KhfE1U/tYTXkCsZmir2I=,iv:Z3HvGV7kQ++X4PiOh7huPgSkO3H+znllKRUq7o18KMo=,tag:ahuzHcDYXzIMxme143p+vw==,type:str]
+    lastmodified: "2023-01-01T19:34:37Z"
+    mac: ENC[AES256_GCM,data:gbeUuYzWsiZA/tnNDt7T9Lasfo1zV/t49198jlE9yR0ETifyggI1qlibYzu7vObQKjqXn24spLKJbm85vwAW3VsGjwnxBtO5qCfBnNLP4OmH1OKMoGmAa2965T9MnmDXWVnJrlcCuFLk8yh7OZfYnX4evJegdBP3WUWFWozHEEY=,iv:LKpEGXH8m5qGXtbovwx7mx+c0UUPFXuyeKAkaO7swW8=,tag:MeBsif8udQeX2MJwjWGczQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
