--- a/ansible/inventory/kube/host_vars/k3s-1.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-1.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:e1VpPCDx,iv:BuHdFAbzEFFbTS3pIwJs64aNss3JrcQUfIs0bGK/vSU=,tag:zSUmBJB0tANqzqr7NQAHaw==,type:str]
-ansible_user: ENC[AES256_GCM,data:C/3zTy5o,iv:UEzLGXQH6I51G3QX06Poms+OQwHKKDG5id0anrg4j9g=,tag:429c1FvqiCi7XKjtRCYG5Q==,type:str]
+kind: ENC[AES256_GCM,data:AuyXfjf1,iv:9xmLRAYxDBeC0OdwvnKdLJpFWdm3YQGw9syvmSDaqzY=,tag:SOQ1bAZehI0SjS1ZdAjnCQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:ETVGqRL/,iv:KJaWdwWnkUdIs40LfQJuqQ0/hsNVYDYUm3+uebrZK7Y=,tag:zWLaGwAgRGSHoLanGot7AQ==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBLRGFrZ0w0SzlPQVF0QkZ1
-            cnZrc2tEL2tWNW81N1BrWlNCSjFndDBuajBVCnJvNDJEeTlxR2R6VnJPSndDSEUz
-            SURvMGtVQkViT2tnOHl3ejRxcEp2STQKLS0tIFJIZkRNNy9oNzJ3VkR2LzRJc2Mr
-            Wm9vK1M4L2J0TTZVdFBKM0I5WTVQejQKNv4+WP99gRla03u+WbSgKG8p6XOK9bdl
-            UDIQc4+4xYVl73T+uGMchOy065UKB+45ug20txxa2NsUskHbd6cFaQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBjbzEvbDYwVklWWUd2ekFT
+            VDk1YngwaUcraEtFbUl2TGxFWjRFMnNGWFFrClhDVlRvN0lXNzY3VmhvVk8rY002
+            Q0ROTGY2MlUxYVN6dUhxZnRhWGtFVTgKLS0tIFNsM0lzc1F0a281R0N1Mjh5VXl4
+            Sk1VdGM4blB5TXVNeHp2Q2QvOXBMdVEKc1fNnnxA4FQJ5Y7sRFdduMkZWMwmTwVa
+            Zbc2NePln843qri6d0E/WzToXQG3aQECBi5C/o+taW9WjesW6bbf2w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-01T17:59:55Z"
-    mac: ENC[AES256_GCM,data:npl4xyuRAT1n2aEFQVMlZBOZe3dEhBbkLrevxdXO839DBqa4awNrzpmW4OK6gp8IiKWb/7wSXWNzft6fzzI/xyAPLUWaixapRNP/KtfRZ7eHtaCKooCpDD+AkP1Pyn9xK9Qi3G7m89T1iRYBhz1+i9fZ9SXICGyiLFaAdaQzulc=,iv:q8DdqyhNfsckeI8agks5qusKM8a1gFj0pD56ApVTEg4=,tag:vPPb0D1rT7VqPhfpOSTjBQ==,type:str]
+    lastmodified: "2023-01-01T19:34:37Z"
+    mac: ENC[AES256_GCM,data:QAIv5zrpdGV8GPK8KTk68CfB8t3UMcArFJz04+sN8eChdyC1fiaGOQTm2HVAdZdJLh5jkG35RXlheDYH76nubfL7uNYiEI7dIE1y/+zxS6vRrbyv1cmEQE6c6IsjULK36JSRPgWwKHxZcAdH5pxFc2mBF3XL3+vMUX16FWaQL44=,iv:ZZ7ZqomOiWzBoVNu6gmXLp9x9k5d/wfA2JKe31BAeTs=,tag:fELVhg7ikU0yTDu8Heti8g==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
