--- a/ansible/inventory/kube/host_vars/k3s-2.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-2.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:YKl9652Y,iv:ZfANvNmJWULVGotUR0PDqJqquXgGG861OT4KoMtOBH0=,tag:UpBgEvE43WMuXVoxiWkFqg==,type:str]
-ansible_user: ENC[AES256_GCM,data:yA+vg6U7,iv:rEjfurXmFKaDZt1UasAgS3vgI7AaVnD4H32tIm5lL38=,tag:1qJm0hBBoAEuJTrhqhqW1Q==,type:str]
+kind: ENC[AES256_GCM,data:ZtJ0jk9l,iv:+oEjB/8CE9jDnHr/WInrYKdBnTG65Y4xmScEUSkA9Pg=,tag:Aqk6aziNREVVpA26RjUY8A==,type:str]
+ansible_user: ENC[AES256_GCM,data:9eSiHSXG,iv:hlKeqf1FcES3Mfws4zcfoKDOGL2OWYAxbNjC5eUDOc8=,tag:tJ0CsVG+qPf3jaSkV3Lpjw==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBlTStTdXU3WTRMUmNZcGRj
-            Y1BoZ0ZrR2F3Qmd5OUJGYWQ5c2UxejZiSUdVCko4NUFQaEpXK2JvMkRCdTRiSG1y
-            eTdmVnhaencwSzVKTk85MlFwaGowa1kKLS0tIElDQlpjWU5NMHNzNmlweFYyaEsr
-            MlF6WmcyN2c1ZFN2TFpNeVhoZVZscjQK4eAlWWODX6W/ssWco+xWAMXjLJ4HJ9G4
-            o1CpP7w9EnFUS5lv6Uc5Ha/tPmH81ecuwZpnXMQJJSBI5g2VB4N9Wg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSByeVVyS2o2bHVKYUd2blZQ
+            ZU5MVHhDeWZ4SFZpUVk0L0NCMVdMMWYxdkFZCnFBU2l4eDFKb3lzY2NWajM1ZS9I
+            d2ZJd0tEQW1PemI4dXMwRERRTjFRN1EKLS0tIE5VUGgraHZ2LzRhMEY5MHNmRTRN
+            d3pGdCs5cUNpRnFWS0Q2eGZtMXB2S28KDTd1mBJ4fsHngCckFpQn5jZ3QrgUYVE4
+            6NF4uPlDeX+hPiP6dwSEH+laMLuQf2rQgqJpvL8QInrVydZ74fVrRg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-01T17:59:55Z"
-    mac: ENC[AES256_GCM,data:o2DzuhpErGHhZ0/B3rOqRtMt/NYDGrGqH6Py/HvG0UIOUccH7C4ktKBTjy45d9Pc6OEsTmx91vbZGH6/t6tfllXcUPASIF8ut96LbADmwWP3Pre3AiUXM13xsf55t/q/CRHYLmyCfBwaaxW6HFP61WpEf+WrG3F5jkHZrJ/2bkY=,iv:0j63I7OQWhxrb9xcCjAKYqfMDlvrLUSiVKG49n+sk+4=,tag:wZ3A2rNe4vVyTkuj18bCnw==,type:str]
+    lastmodified: "2023-01-01T19:34:37Z"
+    mac: ENC[AES256_GCM,data:1Jz/JA4YNAMVtIxlLWYlAXP6wJfjMqnl798VbG+NQ3lO8yTJ+aVTTFT/ZLT2A/6r9up4NafilKnsELF2hjh4UBieE8vD+hjL0xb3w21jTAwQI0U+4mq0OhSrJpPp26znWMoRvNJGkNsGelH57+MQ5V9ZBq7MteJ1b4/e7OmL4jA=,iv:inw6gEkS4sKyHgpNW917s5j8glNHc194Kx0mSj9lOXk=,tag:O1szRC3CedYf1u7ES1Koog==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
