--- a/ansible/inventory/kube/host_vars/k3s-4.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-4.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:x0LmZ8fo,iv:SPkLfYkvwrqj2n9ZtSYmPiGDvgravjJl6Sj6U2S8onY=,tag:DS0frKsmAx/FdXYGgbB7cA==,type:str]
-ansible_user: ENC[AES256_GCM,data:niTAfLUu,iv:t4Tz6vsSVOZmn7WlHcR+cZXDdXQVDnW1dtIh8Cqmcbw=,tag:IihQ60ggW/L3vvUkM7IcWw==,type:str]
+kind: ENC[AES256_GCM,data:sWBNSriT,iv:qpmAQV//xNQlb1MRn5zPMHgnFVRc+xc9jhJompB8CNA=,tag:X3XnQqejA1PtGRFoBp0UTQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:kp+OgbK6,iv:itRQhq2zrb5VYecPN4BPj+reZJJ1UgCbuHS7FocwLmE=,tag:ryVyqjh9L8ZK8Tknmo9RSA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAvZGNSZFBpRlozaG11S3Zw
-            akFOVkFZUzNzOTZTMjZTM01kWFpYMEZ3am1JCk9pSFBoU3RSMk52V0MrTmFGQVJV
-            UHZOck5YOU5Ec1BEU0lqSlJmNWNOZEkKLS0tIEtaZm9zQUorY1duVGtvS2g1NUJz
-            OTRTUUdncHMvRWdqRlNMOWkzc3oyTXcKn4PvwLVdTFyicHA3RpnP5p1Dy+iGixjq
-            X2oyVjMeB0F+wV1ndcFYZel77ZiZ2J3hnCs+cMfCZxyP4ufVJJ+njQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBBRm05VnozY0ZLQnV2RlhF
+            KzVpMTh4dzZ4Ti80Rkd0clNuZTg5MHh5T0dnClVmQUVNcWNMMk9uajZCaWdtbmU4
+            NlNldno1eDJWbWt2cnJKTitndDFrWVUKLS0tIERqWDhkT0VmR2JLRkg3ZW5SZlps
+            S3I0Vi90djF4NWZVNy9Nc1UrSTArekUKCJQ+x+Vv+bwV+8LqHFz9UUvWWhtkqK5f
+            dANqpbTuKaaY6s3Fcw4i4Ccv/3lzCL3I8gELfzHEgmKe7el/xyAaVg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-01T17:59:56Z"
-    mac: ENC[AES256_GCM,data:SuCewqn+KN4gAQwv51AeDiRn2PZMHO8ztX5dWwTz8acStaIwcvfep76QawM1anVrT1lLSOOnLF3Ye3sHdP+0l4x5LEuV5qngdp1Xjl23A2aM0dscqfNrG0uG66j51vYPBZRKS/OtSlWftOYEoTLkUb0VHwlo4aJCB7QT4pf883g=,iv:+Iy5bU9MlBSa1lV7JNmlCYWiapLHkjly5wKLVgFHRME=,tag:Yu4ghzRySCgRCBrRQpcPEQ==,type:str]
+    lastmodified: "2023-01-01T19:34:37Z"
+    mac: ENC[AES256_GCM,data:62yVjAsLNNNLlKL23pSzd3KQelSj1hLM3FlN/Di/m+lbhyUo58SlCOGsSTF92TOidRBkoYABZ9imVcoLP9deSXewaD4n5gkpM+rUp0MFeI2s/TrWMvpY2EAUxgbCN5kLCZgyxzEwnQi+0TKK4Nb/FCghjvywfFceE90iNgAeGtM=,iv:hUUKgF3UjiVAnK4sjQ7qpserZwSenC2mxJlxpLYUpuM=,tag:Kd2rw/Hs6LdO5CbSt/WjYA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
