--- a/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
+++ b/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
@@ -5,9 +5,9 @@ metadata:
     namespace: networking
 type: Opaque
 stringData:
-    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:ykN6YtQhU7LbV+6RMlQpzoeDnd3A,iv:SXrjztWUwnlz6h6SDJBIFzkpVosAO418xCONOksub2Y=,tag:vD/wettofEHpwHVxxiWQFA==,type:str]
-    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:NrcoltU3/iMSMa01xbvGZZ1ndtRMFPJ+6LkBqWyGJ0BuLMM7dw==,iv:wXuWHCazdHwocCLqd2dpbco0YWN3zgULoMbOrEZUAoc=,tag:EgA5LZZr6Vt1THz17ICktw==,type:str]
-    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:nPN276SCctSb/Ao=,iv:7iXLjEgXrxF3ujyq7MJB9k2slxo3Eo2/OIG0VZZQ50o=,tag:yqDc2cs5TO+/LBmJ7vPy9Q==,type:str]
+    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:02SjMubupu4Pa0XZr+R1oHiaHl4N,iv:kqpgcf7eNQbsHYwvpGQ516N27Wv/iKx7x/HMfhQMmj0=,tag:OOQwRGjBJEMFxL+a9Llf1g==,type:str]
+    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:soRFfvdrkfzgVsFN1ONYPd1smYhA7qbNTQmL9VANxfpYMDAffw==,iv:bCilqboSp07+wW+NyBWIoKpcSZDx9Ek3Kxutd7o4C8Q=,tag:ZbS6muFlItv3OWAwc/FIcQ==,type:str]
+    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:jKcMRR2O56zvNLo=,iv:PL58q5pmlMpkAjwSz8dlKRq+xjoGaHAEZOqYEWjm+RI=,tag:WdzQN0TNfpuUt97R3Q8Zfw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvdG5zWnN0RGkyaUV0Skpq
-            dWpQMlRkbDRtVWUvdTRaN3d4UWZXTUI1Q2hrCldrZlAvRnYrd3BQMmtscTR4bTVP
-            TFdrbnJzYVFpNUZDd2k2M2MyTy9xc3MKLS0tIG85RVJ4MEN6cjUxdVZHMTFQUTdU
-            WE1iZXFuNW9hUDFPZjhjeXNET0RYNHMKJ01KjqJaFEa5Z3Paf8RK5YiyiPdrsz0k
-            8OTZVYF+udGTJoAJcbBxAzz+gizmsWZU5+42kE3fMi9DXyz7YkkuBQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBJUWR0dmZ6QUdzbUlkK2c1
+            cktwQWVjTEVCM1U2NHNUbkRCb3AvWjJlM1djCmswOGlJNkxpWExMVVZBT0VVNEtp
+            OW51ajUwczRMVHNWOFdHRTBmZjE2UDQKLS0tIFdpRHMyakU5a3dsTzhzSnpZbWRh
+            YUoxQnRtRmVMeGh0UENCZFZTSk9uTEUK2hZW4YT9qexalrhlIm1ajdsVJTISgRRW
+            6Jrg8CQEgSB9DNE2ilNvRvnSArvh08f3poliykMKhVFaqdQ99KvQ4g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-01T17:59:55Z"
-    mac: ENC[AES256_GCM,data:7IGfuzervCDJG4eJfeC27E1umykEkThOvU5HKQp+u5yE43zSeH+h60+/26BxCLRiQ6hvgMuAx4cp7kqoLAuxy791tR2ffBGweF1rICQn9Uxcje+wfsvypkGW4OLvM2uITuGLSC6PtJqslvJS6Ev4+gBj08hIf3XfGPllxg/jVPs=,iv:3ghf1+0D4vlAyxHqYwkpn2YKoaxntvntiSKyoLK8yOs=,tag:GydLv4wuYzkddEzDlB9eOQ==,type:str]
+    lastmodified: "2023-01-01T19:34:37Z"
+    mac: ENC[AES256_GCM,data:jwAB+md0L0Xl1OJSQRyoRI8umOsD5nGqRWfAxVJHLtUDUmFO4qbse4Kd79dT9UzZyjawrmLz2+htUjOzHYglg1hUavX6H0aAB7JQW//+W55ayyO1jA9RlOW2kdBlanI/xmC3IxPKFM/xofUKYiQVXXQMFaYl4vJR90raaVOkm0U=,iv:xzPw9jhz6P7Pqv6mpAXfXUp8a3xrWdWPI/B9rUBc7No=,tag:fv72XzriwkDwOB7PtSHX7w==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
