--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,10 +4,11 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:IhI5o2YKnOKHX48=,iv:PRlNVLhsdouIdYAi4KgQLicx9Om32+BLX1IWUiETmow=,tag:4zXwFzPyqPzLSROYfq7nDQ==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:6J3LGewA0g+trtA7+75naQcjnKHY,iv:p9EMl+uBn682NhQI5zRgLcEWPJIxb87vRuyAWlq3qwo=,tag:90g0BMqSEEGc7vTQ7TRqxA==,type:str]
-    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:a77E6sWDpqL0m47r++daXyckQ/3zokVsA2QpUIY6rxo/i8OMzvf7Bmg49+XyIgC6UWW704ZtUMOnPD36mKTSvNImzhfX//c=,iv:kYQZi1lANnaM0H4m9UqvCvDYzmjG4EdoeP49zdXoPA4=,tag:PjEl5u1U+xmlXjlYCVZmSA==,type:str]
-    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:vXIXcIKcp/ZwahMkglIo0+HI6iSpXIRh74xVDvU0wd/QQfM=,iv:UVdQvT+EnwVAIIWcyUN+ewRAMjN+dB7ZqAz3sj245e8=,tag:i5zZPzCNtr1czZ88ezTY7w==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:YOes+AbQxIhwWfk=,iv:z7IaLiUfNUhc6R73AQRvryOxzoV9OubMgs3vlQXElkA=,tag:U5ZEdIMdPDk7WiHX68SV1A==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:XWtttQ8MOdbMqYhHMM4AyrHl1H0N,iv:rBFCrKlpfopFsN8jK6MpXU6WcONr1g6yxNZBVpQ0LyU=,tag:NMO91K84F1ZPfTt1JQe1wg==,type:str]
+    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:jWe9aSScu9MSqJONmVKuzyzLC/U9reK9e9585eSCFE1knYRg2pBFMFUdCp0x1uNWhXS8BHSkK9r2ymNt59VUQYh8KT7YdYY=,iv:gO5LBMRRkLpHbWc0SSLZJLkPoCBAO7Uqq9hmlHBdhq8=,tag:boJ8/zJ+yUiaLMbQf4uuSA==,type:str]
+    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:WwuV8Wmfmk5MYL3mcHZlCq4Y0ceMj5nUpG4wyr+tkcvcwJA=,iv:oI7XoCq5zCTLTzaclKqvj1lQzPt4spS1QjfyLe6uLkM=,tag:/K8GoJZyWww4L31GTnSjnw==,type:str]
+    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:cjtC35qj9N/IrvrA8eFOj/STWA==,iv:89sq1xUYZQp2es9ezGKphXzlWjrPOVd4Y8lEI6NP+V4=,tag:AdXJ1l8GxETV8KusUSuy7w==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +18,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAybUNDcU53cXdrVDRMdUwy
-            VDdPd3RKdFRsZis0eWN2bzVKUVMwMFFPTGl3CmpDNThYLzFabDNpbXJ0WDJaVzh6
-            cjlwMXB2TCtmbEFyMld3ZU9qUFFLV0UKLS0tIHU2a2Q2RHlrL2RTc2dOMTdKUnpt
-            aDlzY1VFeTdYdVk1ck8wVndXRW1iWFkK4/uZHbbHBiBWG+0g3Ofe4cw/F25PC9OR
-            VwKVJtOGNK7IAbQJPGRZ1+TOtFnX+Jqiorx9n2rPpTfxwW2ySDuKjQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBjbU1rNGNWTEtPd2RyOTIx
+            anZHbUkweXk5VFI4T2F6NzBjMVdaQVdRYnh3CkhiUXBOd00xaUFLbVQzRkpNNTVX
+            bFR2UlI4bEV6NzY5blVxT2FSZWFueTQKLS0tIGtMZ2tMaGh1cFR3cTlFaW9uSXJv
+            VWlTc2JqQUdIZXpHU3pjNlhJZk9TUXcKQL2Pg0y4P6aGWFoKlNSpZWhcY37bHdjD
+            hmS+STWXYyUSfnDJQO2OL2lA04bNh0IojmFM1uvXr1x03kvuKjZnPw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-01T17:59:55Z"
-    mac: ENC[AES256_GCM,data:DP7NN3g7MpMOcaGoATQZTy+tLXjdKHuV0wGMrRLGMR9n5FIzvwln6PurgfVjc91tLySzH+nkj/t//yrRfylaeV8Jooqpvbk32D6N6c20APqKAijjkwI6YgeG1bvfi+JzWbpBPjsFnHDBTdvl26c8nTB0cA1oZzAvJ2ADn4wv6Yw=,iv:L9PHk9wX7UKoFrwtg+pXlArdq4ezczvp52Av/Roomf0=,tag:2SviuJ3RXrzSrx0XUy9ryg==,type:str]
+    lastmodified: "2023-01-01T19:34:37Z"
+    mac: ENC[AES256_GCM,data:FQTuELRoJgGXrLbzvd5dBG/Xsd94U4wLEcB/+7MSRMK+Udp+GsCAA4R3tyXDVervZR3CHPq/DdzImyUul0jI6RYy/y+IXIvTiTHgigLqL/okTDUptejDdp4Jd5//NvVm/P/j7qBE72u5vwi8KAw53w2wR1x9ZVGOPydfAq8v2yI=,iv:dGzNA/BI8ZjTeDIY+27O7mh1armunpFkzg79vUoBE8U=,tag:n/EyskeVfhUQnHk+Ha2CWw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
