--- a/tmpl/kubernetes/cluster-secrets.sops.yaml
+++ b/tmpl/kubernetes/cluster-secrets.sops.yaml
@@ -9,3 +9,4 @@ stringData:
   SECRET_CLOUDFLARE_EMAIL: "${BOOTSTRAP_CLOUDFLARE_EMAIL}"
   SECRET_GOOGLE_CLIENT_ID: "${BOOTSTRAP_GOOGLE_CLIENT_ID}"
   SECRET_GOOGLE_CLIENT_SECRET: "${BOOTSTRAP_GOOGLE_CLIENT_SECRET}"
+  SECRET_GOOGLE_WHITELIST_EMAIL: "${BOOTSTRAP_GOOGLE_WHITELIST_EMAIL}"
