--- a/ansible/inventory/kube/host_vars/k3s-3.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-3.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:kQy6BXb6,iv:vsdvY2iumJsFDNGtJf5uJrxicVOq1Bv5sFTF8V5aUoU=,tag:sn5DbL3mh3MbEN+LhMkIVA==,type:str]
-ansible_user: ENC[AES256_GCM,data:AZvFdOXU,iv:AyONmqnpuu2lGeWXQt3KO1KDC0bvfWx/WrPS/cSdTR4=,tag:/X/JXIBrbui1FRfBgQB4xw==,type:str]
+kind: ENC[AES256_GCM,data:Uv0ocgPt,iv:L8CEiI6h8yIuvDLxrb7Boellryz0Qom98rBFFPyx+bk=,tag:+a7LBGLjR/ijIORKJ6dv7A==,type:str]
+ansible_user: ENC[AES256_GCM,data:vL18wUdV,iv:Cux/MQthb9V3Ng5gyhPKfTPLHcAxpp9OM1IxcA9Vcbs=,tag:1LQMO8TMLjWJSrTgt22fXQ==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA3ZnBONXQzMklTNFRzbDdw
-            a2cva1VmTXFOaGtSeFhwUW9kbzZraGpMRjNNCm5lVm81Z0NTYktSR090WkhtZ2xm
-            Vms1RlJDckV2YkV3ZS8xWGltN1NhNmMKLS0tIHhUOGJjTUhUNUNjSUtUcUJQRllK
-            TlVFV0RhV2x4NnB2cC90NzkwRWd6bmsK7tMdcd3IQ8C0FXa1ct8EXXeW3UDgf/ZT
-            Hg4lEKx5rieCxXtvG00X9QHOImpPLoByGSgG0zSaq4leeeXzNLq1tg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5Z1paQ1JOQ2IwZVlLWlpV
+            Qlh1dkJqSGFKYWdzK0ZxSHZzcEhUL1Q2b3dvCm1YMWNBWlhyWUdsbnFYQ3crRGc3
+            RWVHZjJhL0VobVZFTGVXek85blNVYW8KLS0tIFcxejgyM1Y5RHloV0ZJTENDd3E4
+            NFlWVlFibEtVazhnV1ZGVU5RQmF4WjgKJhbrvBpW0fTipjRz9r2WiE0mjzmitOod
+            VKlW7cdHxJKQJDjxfwb8+bv1OsEyYrNbeKM7R+XFaogWcV3HWFGugA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-01T17:59:56Z"
-    mac: ENC[AES256_GCM,data:Yh/XD/x+rmZJ5uuKJWB2bp5zEJx+EMVuJdOu3iK8+4X/9Hj0YVz1euZ4geKYhKX1Rrv6z1qKIcFHsUk8qO7hBnaUtGWxLO8cg2gUQADlqhXeLvgZFj5qpNyx1j42hY2HMZhweR/Z9Enbk3QPmxdHVW8Uqx5NadQ7yqfT60TumaU=,iv:QdcuhSCq/NwQNXU2Np9S0XF5eBJCyBM2qNuzwlMWqaw=,tag:ifJS1jN9rwFUizsyF/N3vQ==,type:str]
+    lastmodified: "2023-01-01T19:34:37Z"
+    mac: ENC[AES256_GCM,data:vcJw5RU/xn4cUURuVBSbEdMZRuejVS05WfDrpQJCM6nUJWn6ZN5Xu/LfQ6nFFZznYEJg9IpsjBvZ2cXslxgyzM7RdoMkSRR5aDjc8qiTqZ9KULJNfAGQrrpRGtKibDM02SgchCSJT7h8gVjxulq3P/JQnHzsrXp/MxL2B9ZwNdQ=,iv:ZaGq9OzMLzh2KgNdfjoZJiTujk9VtjUf/1yf/mu3jA8=,tag:yh+BA4dVz3rWT8A1K+wUKg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
