--- a/kubernetes/apps/networking/traefik-forward-auth/app/helmrelease.yaml
+++ b/kubernetes/apps/networking/traefik-forward-auth/app/helmrelease.yaml
@@ -42,4 +42,4 @@ spec:
       PROVIDERS_GOOGLE_CLIENT_ID: "${SECRET_GOOGLE_CLIENT_ID}"
       PROVIDERS_GOOGLE_CLIENT_SECRET: "${SECRET_GOOGLE_CLIENT_SECRET}"
       URL_PATH: "/_oauth"
-      WHITELIST: "${SECRET_CLOUDFLARE_EMAIL}"
+      WHITELIST: "${SECRET_GOOGLE_WHITELIST_EMAIL}"
